correção das imagens

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <span class="tipo">elétrico</span>
             <div class="cartao-imagem">
-              <img src="./src/image/devchu.png" alt="Devchu" />
+              <img src="./src/img/devchu.png" alt="Devchu" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -51,7 +51,7 @@
             </div>
             <span class="tipo">fogo</span>
             <div class="cartao-imagem">
-              <img src="./src/image/codevee.png" alt="Codevee" />
+              <img src="./src/img/codevee.png" alt="Codevee" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -74,7 +74,7 @@
             </div>
             <span class="tipo">água</span>
             <div class="cartao-imagem">
-              <img src="./src/image/scriptle.png" alt="Scriptle" />
+              <img src="./src/img/scriptle.png" alt="Scriptle" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -98,7 +98,7 @@
             </div>
             <span class="tipo">psíquico</span>
             <div class="cartao-imagem">
-              <img src="./src/image/psycoder.png" alt="Psycoder" />
+              <img src="./src/img/psycoder.png" alt="Psycoder" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -121,7 +121,7 @@
             </div>
             <span class="tipo">fogo</span>
             <div class="cartao-imagem">
-              <img src="./src/image/charmandev.png" alt="Charmandev" />
+              <img src="./src/img/charmandev.png" alt="Charmandev" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -144,7 +144,7 @@
             </div>
             <span class="tipo">fada</span>
             <div class="cartao-imagem">
-              <img src="./src/image/devlypuff.png" alt="Devlypuff" />
+              <img src="./src/img/devlypuff.png" alt="Devlypuff" />
             </div>
           </div>
           <div class="cartao-informacoes">
@@ -163,27 +163,27 @@
       <nav class="listagem">
         <ul>
           <li class="pokedev ativo" id="devchu">
-            <img src="src/image/devchu.png" alt="cabeça do devchu" />
+            <img src="./src/img/devchu.png" alt="cabeça do devchu" />
             <span>Devchu</span>
           </li>
           <li class="pokedev" id="scriptle">
-            <img src="src/image/scriptle.png" alt="cabeça do scriptle" />
+            <img src="./src/img/scriptle.png" alt="cabeça do scriptle" />
             <span>Scriptle</span>
           </li>
           <li class="pokedev" id="codevee">
-            <img src="src/image/codevee.png" alt="cabeça do codevee" />
+            <img src="./src/img/codevee.png" alt="cabeça do codevee" />
             <span>Codevee</span>
           </li>
           <li class="pokedev" id="psycoder">
-            <img src="src/image/psycoder.png" alt="cabeça do psycoder" />
+            <img src="./src/img/psycoder.png" alt="cabeça do psycoder" />
             <span>Psycoder</span>
           </li>
           <li class="pokedev" id="charmandev">
-            <img src="src/image/charmandev.png" alt="cabeça do charmandev" />
+            <img src="./src/img/charmandev.png" alt="cabeça do charmandev" />
             <span>Charmandev</span>
           </li>
           <li class="pokedev" id="devlypuff">
-            <img src="src/image/devlypuff.png" alt="cabeça do devlypuff" />
+            <img src="./src/img/devlypuff.png" alt="cabeça do devlypuff" />
             <span>Devlypuff</span>
           </li>
         </ul>
